Adding canAddToCart Function

--- a/SchoolClub.html
+++ b/SchoolClub.html
@@ -49,6 +49,9 @@
                 cartItemCount: function () {
                     //its value is calculated when it is called
                     return this.cart.length;
+                },
+                canAddToCart: function () {
+                    return this.product.availableInventory > this.cartItemCount;
                 }
             }
         });
