--- a/SchoolClub.html
+++ b/SchoolClub.html
@@ -18,7 +18,7 @@
             <h2 v-text="product.title"></h2>
             <p>Location: {{product.location}}</p>
             <p>Price: {{product.price}}</p>
-            <p>No.of Spaces: {{product.availableInventory}}</p>
+            <p>No.of Spaces: {{product.availableInventory - cartItemCount}}</p>
             <button v-on:click="addToCart" v-if='canAddToCart'>
                 Add to cart
             </button>
