--- a/IndividualCoursework-1.html
+++ b/IndividualCoursework-1.html
@@ -22,6 +22,13 @@
                 sitename: 'ClubTime',
                 products: products,
                 cart: [],
+                showProduct: true,
+                checked:'',
+                picked:'',
+                order: {
+                    name: '',
+                    number: ''
+                },
                 
             },
             // created: function () {
